# testbotosr

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  product_aliases.json  pyproject.toml
bot/core/: __init__.py  config.py  logger.py  prompts.py
bot/handlers/: __init__.py  document.py  invoice_edit.py  photo.py  start.py
bot/keyboards/: __init__.py  invoice_edit.py
bot/schemas/: __init__.py  invoice.py
bot/services/: __init__.py  gemini_service.py  invoice_render.py  llm_service.py  telegram_file_service.py
bot/states/: __init__.py  invoice.py
services/: iiko_catalog.py  iiko_server_service.py
