[tool.poetry]
name = "ocr-llm-bot"
version = "0.1.0"
description = "Telegram bot for invoice OCR processing via Gemini"
authors = []
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
httpx = "^0.28.0"
google-genai = "^1.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
