[tool.poetry]
name = "ocr-llm-bot"
version = "0.1.0"
description = "Telegram bot for invoice OCR processing via LLM"
authors = []
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.15.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
httpx = "^0.28.0"
openai = "^2.41.1"
tenacity = "^9.1.4"
pymupdf = "^1.27.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
